# ProgettoPCS2025

./: .gitignore  CMakeLists.txt  ProgettoPCS2025.txt  README.md  a.out  main.cpp  main_test.cpp  output.cpp  triangolazione.cpp
DocumentazioneUML/Cammini minimi/: AlgoritmoDjsktra.txt
DocumentazioneUML/Main/: main.txt
DocumentazioneUML/MainTest/: mainTest.txt
DocumentazioneUML/TestProprieta/: TestProprieta.txt
DocumentazioneUML/Triangolazione/: FunzioniAusiliarie.txt  TriangolazioneI.txt  TriangolazioneII.txt
DocumentazioneUML/src/Cammini minimi/: CreaListaAdiacenza.txt
DocumentazioneUML/src/Duale/: Duale.txt  OrderFaces.txt
DocumentazioneUML/src/Output/: Output.txt
DocumentazioneUML/src/PolyhedraMesh/: PolyhedraMesh.txt
DocumentazioneUML/src/Proiezione sulla sfera/: Proiezione.txt
DocumentazioneUML/src/Triangolazione/: FunzioniAusiliarie.txt  TriangolazioneI.txt  TriangolazioneII.txt
DocumentazioneUML/src/Utils/: Utils.txt
DocumentazioneUML/src/Utils/Funzioni di Import/: ImportCell0Ds.txt  ImportCell1Ds.txt  ImportCell2Ds.txt  ImportCell3Ds.txt  ImportMesh.txt
Duale/: Duale.cpp
ExportParaview/: CMakeLists.txt
Icosaedro/: Icosaedro_Cell0Ds.csv  Icosaedro_Cell1Ds.csv  Icosaedro_Cell2Ds.csv  Icosaedro_Cell3Ds.csv
Ottaedro/: Ottaedro_Cell0Ds.csv  Ottaedro_Cell1Ds.csv  Ottaedro_Cell2Ds.csv  Ottaedro_Cell3Ds.csv
Tetraedro/: Tetraedro_Cell0Ds.csv  Tetraedro_Cell1Ds.csv  Tetraedro_Cell2Ds.csv  Tetraedro_Cell3Ds.csv
src/: CMakeLists.txt  CamminiMinimi.cpp  CamminiMinimi.hpp  Duale.cpp  Duale.hpp  PolygonalMesh.hpp  PolyhedraMesh.hpp  Proiezione.cpp  Proiezione.hpp  Utils.cpp  Utils.hpp  output.cpp  output.hpp  triangolazione.cpp  triangolazione.hpp
src_test/: CMakeLists.txt  test_proprieta_poliedro.hpp
